work on mobile shop : fix bottom oberflow issue

--- a/src/components/Modal/style.scss
+++ b/src/components/Modal/style.scss
@@ -31,12 +31,13 @@
 }
 
 .modal__header {
-  height: 60px;
-  margin-bottom: 25px;
-  flex-grow: initial;
+  height: 70px;
+  padding: 1.5rem;
+  flex-grow: 1;
   display: flex;
   align-items: center;
   font-family: 'Press Start 2P', sans-serif;
+  position: relative;
   .modal__header__title {
     flex-grow: 1;
     text-align: center;
@@ -48,7 +49,9 @@
   .modal__header__closeBtn {
     background: none;
     border: none;
-    margin-right: 15px;
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
     width: 40px;
     height: 40px;
     & > svg {
@@ -61,9 +64,9 @@
 
 .modal__content {
   flex-grow: 2;
-  height: calc(100vh - 85px);
+  height: calc(100vh - 70px - 3rem);
   display: flex;
-  padding: 0 15px;
+  padding: 0 1rem 1rem 1rem;
 }
 
 .modal-hidden {
