--- a/src/components/Shop/style.scss
+++ b/src/components/Shop/style.scss
@@ -3,31 +3,35 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding-bottom: 1rem;
+  padding-bottom: 0;
   .shop__container__tabs {
     display: flex;
     position: relative;
-    top: 1px;
+    margin-bottom: 1rem;
 
     [class^='shop__container__tabs__'] {
-      border: 1px solid #fff;
-      background-color: rgb(38, 199, 65);
-      width: 35px;
-      height: 35px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba(32,2,32, .3);
+      border: none;
+      width: 40px;
+      height: 40px;
       padding: .5rem;
       & > svg {
         width: 100%;
         height: 100%;
+        fill: rgba(255, 255, 255, .5);
       }
     }
     [class*='--selected'] {
       background-color: rgba(32,2,32,.5);
+      & > svg {
+        fill: rgba(255, 255, 255, 1);
+      }
     }
     .shop__container__tabs__clic {
       margin-right: 1rem;
-    }
-    .shop__container__tabs__bookworm {
-      
     }
   }
 }
@@ -36,7 +40,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  padding-bottom: 1rem;
+  overflow: hidden;
   .shop__container__nested__tabs {
     display: flex;
     position: relative;
@@ -61,12 +65,6 @@
         fill: rgba(255, 255, 255, 1);
       }
     }
-    .shop__container__nested__tabs__flat {
-  
-    }
-    .shop__container__nested__tabs__percent {
-  
-    }
   }
 }
 
@@ -77,14 +75,23 @@
   flex-grow: 1;
   z-index: 0;
   background-color: rgba(32,2,32,.5);
-  padding: 1rem;
-  overflow-y: auto;
-  &::-webkit-scrollbar {
-    width: 3px;
-    background-color: rgba(32,2,32,.5);
-  }
-  &::-webkit-scrollbar-thumb {
-    background-color: #6cf5c6;
+  padding: 1rem 0 1rem 1rem;
+  overflow: hidden;
+  .inner_shop {
+    width: 100%;
+    height: 100%;
+    padding-right: 1rem;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    overflow-x: hidden;
+    &::-webkit-scrollbar {
+      width: 3px;
+      background-color: rgba(32,2,32,.5);
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: #6cf5c6;
+    }
   }
 }
 
